Replace &middot; with -

--- a/themes/templates/post.mustache
+++ b/themes/templates/post.mustache
@@ -2,7 +2,7 @@
 <h1>{{{page.title}}}</h1>
 <time>{{page.date}}</time>
 {{#page.categoryDisplay}}
-	&middot; <a href="/categories/{{{url}}}">{{category}}</a>
+ - <a href="/categories/{{{url}}}">{{category}}</a>
 {{/page.categoryDisplay}}
 {{{page.content}}}
 {{> footer}}
