--- a/themes/styles/custom.css
+++ b/themes/styles/custom.css
@@ -90,11 +90,36 @@ a.info-link { border-bottom: 1px dashed #ddd; text-decoration: none; color: inhe
 a.info-link:hover { text-decoration: none; color: #444; background: #eee; position:relative; }
 a.info-link:hover:after { content: '?'; position:absolute; bottom: 1.6em; right: -.7em; border-radius: 100%; background: #f9f9f9; border: 1px dashed #ddd; width: 1.25em; height: 1.25em; font-size: .5em; line-height: 1.25em; text-align: center; opacity: 1; font-weight: normal; }
 
-/* taken from prism, but just applied to all code */
-code, pre {
-  color: #f8f8f2;
+.clear:after {clear:both;}
+.clear:before, .clear:after {content:"";display:table;}
+
+@media print {
+  footer, header { display: none !important; }
+  .no-print { display: none !important; }
+}
+@media only screen and (max-width: 600px) {
+  .hide-on-small { display: none !important; }
+}
+
+h1 {
+  line-height: 1.25;
+  margin-bottom: .25em;
+}
+
+/* PrismJS 1.10.0
+http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike+javascript */
+/**
+ * okaidia theme for JavaScript, CSS and HTML
+ * Loosely based on Monokai textmate theme by http://www.monokai.nl/
+ * @author ocodia
+ */
+ 
+code[class*="language-"],
+pre[class*="language-"],
+:not(pre) > code {
+  color: black;
   background: none;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 1px white;
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   text-align: left;
   white-space: pre;
@@ -113,32 +138,116 @@ code, pre {
   hyphens: none;
 }
 
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
+pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
+code[class*="language-"]::selection, code[class*="language-"] ::selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
+@media print {
+  code[class*="language-"],
+  pre[class*="language-"] {
+    text-shadow: none;
+  }
+}
+
 /* Code blocks */
-pre {
+pre[class*="language-"] {
   padding: 1em;
   margin: .5em 0;
   overflow: auto;
-  border-radius: 0.3em;
 }
 
-:not(pre) > code, pre {
-  background: #272822;
+:not(pre) > code/*[class*="language-"]*/,
+pre[class*="language-"] {
+  background: #f5f2f0;
 }
 
 /* Inline code */
-:not(pre) > code {
+:not(pre) > code/*[class*="language-"]*/ {
+  display: inline-block;
   padding: .1em;
   border-radius: .3em;
   white-space: normal;
 }
 
-.clear:after {clear:both;}
-.clear:before, .clear:after {content:"";display:table;}
-
-@media print {
-  footer, header { display: none !important; }
-  .no-print { display: none !important; }
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: slategray;
 }
-@media only screen and (max-width: 600px) {
-  .hide-on-small { display: none !important; }
+
+.token.punctuation {
+  color: #999;
+}
+
+.namespace {
+  opacity: .7;
+}
+
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #905;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #4D6D0C;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+  color: #9a6e3a;
+  background: hsla(0, 0%, 100%, .5);
+}
+
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+  color: #07a;
+}
+
+.token.property {
+  color: #0E4A64;
+}
+
+.token.function,
+.token.class-name {
+  color: #895F17;
+}
+
+.token.regex,
+.token.important,
+.token.variable {
+  color: #e90;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+.token.italic {
+  font-style: italic;
+}
+
+.token.entity {
+  cursor: help;
 }
