--- a/themes/templates/header.mustache
+++ b/themes/templates/header.mustache
@@ -14,6 +14,7 @@
 	<link rel="canonical" href="{{{site.url}}}{{{page.url}}}" />
 
 	<link rel="stylesheet" href="/styles/style.css" type="text/css" />
+	<script src="/scripts/js.js" type="text/javascript"></script>
 
 	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 </head>
