--- a/themes/styles/chrysalide.css
+++ b/themes/styles/chrysalide.css
@@ -39,7 +39,8 @@ h1, h3 {
 
 header, #container {
 	max-width: 1024px;
-	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
 	padding: 0 10px;
 }
 
