Move /categories/ into /blog/

--- a/themes/templates/atom.mustache
+++ b/themes/templates/atom.mustache
@@ -28,7 +28,7 @@
 		</summary>
 
 		{{#categoryDisplay}}
-		<category term="{{category}}" scheme="{{{site.url}}}/categories/{{{url}}}"/>
+		<category term="{{category}}" scheme="{{{site.url}}}{{{url}}}"/>
 		{{/categoryDisplay}}
 	</entry>
 	{{/site.feed}}
