--- a/themes/templates/categories.mustache
+++ b/themes/templates/categories.mustache
@@ -5,7 +5,7 @@
 <h3><a href="/{{{url}}}">{{{title}}}</a></h3>
 <time>{{date}}</time>
 {{#categoryDisplay}}
- - <a href="/categories/{{{url}}}">{{category}}</a>
+ - <a href="/{{{url}}}">{{category}}</a>
 {{/categoryDisplay}}
 </div>
 {{/site.posts}}
