--- a/themes/styles/custom.css
+++ b/themes/styles/custom.css
@@ -70,7 +70,8 @@ ul.social-links { list-style:none; margin:0; padding: 0; }
 ul.social-links li { float:left; display:block; margin-right: 1em; }
 ul.social-links li a { opacity: 0.75; text-decoration: none; }
 ul.social-links li a:hover { opacity: 1; }
-ul.social-links li a img { margin:0; margin-right: .25em; }
+ul.social-links li a img, ul.social-links li a svg { margin:0; margin-right: .25em; }
+ul.social-links li a svg { display: inline-block; width: 32px; height: 32px; fill: white; }
 
 .latest-blog > h2 { margin: 0; font-size: 100%; font-weight: normal; font-style: italic; }
 .blog { 
