--- a/themes/styles/custom.css
+++ b/themes/styles/custom.css
@@ -87,6 +87,26 @@ header { margin-top: 15px; }
 .header-menu { list-style: none; padding:0; margin:0; display: inline-block; }
 .header-menu > li { display: inline-block; margin-right: 10px; }
 
+.note {
+  border-left: .25rem solid;
+  border-right: .25rem solid;
+  border-color: #ddd;
+  background-color: #f4f4f4;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+/* Inline code within a note */
+.note > code, .note :not(pre) > code,
+.note pre[class*="language-"] {
+  background: #e7e7e7;
+}
+
+details summary { cursor: pointer; }
+
 a.info-link { border-bottom: 1px dashed #ddd; text-decoration: none; color: inherit; }
 a.info-link:hover { text-decoration: none; color: #444; background: #eee; position:relative; }
 a.info-link:hover:after { content: '?'; position:absolute; bottom: 1.6em; right: -.7em; border-radius: 100%; background: #f9f9f9; border: 1px dashed #ddd; width: 1.25em; height: 1.25em; font-size: .5em; line-height: 1.25em; text-align: center; opacity: 1; font-weight: normal; }
