Attempt make code block font size more consistent
I don't really understand font sizes it turns out, for whatever reason the font-family declaration here was changing the size of the code depending on which font was used. Maybe this will make things more consistent.

--- a/themes/styles/custom.css
+++ b/themes/styles/custom.css
@@ -148,7 +148,8 @@ pre[class*="language-"],
 :not(pre) > code {
   background: none;
   text-shadow: 0 1px white;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-family: monospace;
+  font-size: 108%;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
