--- a/themes/templates/header.mustache
+++ b/themes/templates/header.mustache
@@ -2,6 +2,7 @@
 <html lang="{{{site.lang}}}">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>{{{page.title}}} - {{{site.name}}}</title>
 
 	<meta name="description" content="{{{page.description}}}" />
