--- a/themes/styles/custom.css
+++ b/themes/styles/custom.css
@@ -45,6 +45,7 @@
   position: relative;
   padding: .25rem 0.5rem;
   margin-left: 0.5rem;
+  margin-right: 0.5rem;
   border-top: 1px solid #ddd;
   font-size: 80%;
 }
@@ -334,7 +335,7 @@ pre[class*="language-"] {
     background-color: #111;
   }
   .home-card > .stack > .action {
-    border-color: #111111;
+    border-color: #2a2a2a;
   }
   .home-card > .stack > a.content:hover {
     color: #ddd;
