--- a/themes/templates/post.mustache
+++ b/themes/templates/post.mustache
@@ -5,4 +5,5 @@
  - <a href="/{{{url}}}">{{category}}</a>
 {{/page.categoryDisplay}}
 {{{page.content}}}
+<aside class="note"><p class="post-feedback">Got a question / comment / anything else? Email me at <a href="mailto:feedback@ryanliptak.com">feedback@ryanliptak.com</a></p></aside>
 {{> footer}}
