--- a/themes/templates/post.mustache
+++ b/themes/templates/post.mustache
@@ -1,9 +1,11 @@
 {{> header}}
+<div class="blog-post">
 <h1>{{{page.title}}}</h1>
 <time>{{page.date}}</time>
 {{#page.categoryDisplay}}
  - <a href="/{{{url}}}">{{category}}</a>
 {{/page.categoryDisplay}}
 {{{page.content}}}
-<aside class="note"><p class="post-feedback">Got a question / comment / anything else? Email me at <a href="mailto:feedback@ryanliptak.com">feedback@ryanliptak.com</a></p></aside>
+<aside class="note post-feedback"><p>Got a question / comment / anything else? Email me at <a href="mailto:feedback@ryanliptak.com">feedback@ryanliptak.com</a></p></aside>
+</div>
 {{> footer}}
