--- a/themes/styles/custom.css
+++ b/themes/styles/custom.css
@@ -347,6 +347,7 @@ pre[class*="language-"] {
   }
   .home-card > .stack > .action {
     border-color: #2a2a2a;
+    color: #aaa;
   }
   .home-card > .stack > a.content:hover {
     color: #ddd;
