--- a/themes/styles/custom.css
+++ b/themes/styles/custom.css
@@ -174,6 +174,10 @@ tt{
 code {
   font-size: 87.5%;
 }
+:link > code, :visited > code {
+  text-decoration: underline;
+  color: inherit;
+}
 
 /* PrismJS 1.10.0
 http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike+javascript */
