--- a/themes/templates/post.mustache
+++ b/themes/templates/post.mustache
@@ -9,6 +9,9 @@
  - <a href="/{{{url}}}">{{category}}</a>
 {{/page.categoryDisplay}}
 {{{page.content}}}
+<div class="post-footer">
 <aside class="note post-feedback"><p>Got a question / comment / anything else? Email me at <a href="mailto:feedback@ryanliptak.com">feedback@ryanliptak.com</a></p></aside>
+<aside class="note post-support"><p>You can <a href="https://github.com/sponsors/squeek502">sponsor me on GitHub</a> if that's something you'd like to do</p></aside>
+</div>
 </div>
 {{> footer}}
