misc html correctness fixes

--- a/themes/templates/header.mustache
+++ b/themes/templates/header.mustache
@@ -16,7 +16,7 @@
 
 	<link rel="stylesheet" href="/styles/style.css" type="text/css" />
 	{{#page.css}}
-	<style type="text/css">
+	<style>
 {{{page.css}}}
 	</style>
 	{{/page.css}}
